upgrade to es9 java 17 and spring boot 3